# minotor

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.py  setup.py
.github/workflows/: ci.yml  python-tests.yml  react-tests.yml
docs/: Attributions.md  Contribute.md  ContributionGuidelines.md  Installation.md  Tutorial.md
minotor/: Dockerfile  command.py  constants.py  run.py
minotor/api/: data_handler.py  projection_handler.py  training_data_handler.py
minotor/data_managers/: file_manager.py  prediction_data.py  preprocessors.py
minotor/decorators/: feature_monitoring.py  prediction_monitoring.py
minotor/encoders/: json_encoder.py
minotor/front/: Dockerfile  package-lock.json  package.json
minotor/seeds/: iris_seed.py  titanic_seed.py
minotor/statistics/: projection.py
minotoring/: Dockerfile  __init__.py  command.py  constants.py  data_writer.py  decorators.py  docker-compose.yml  entrypoint.py  pyproject.toml  run.py
minotoring/api/: base_route.py  data_handler.py  data_proxy.py  projection_handler.py  training_data_handler.py  websocket_handler.py
minotoring/data_managers/: constants.py  data_structure.py  data_types.py  data_writer.py  feature_data.py  file_manager.py  prediction_data.py  preprocessors.py  statistics.py
minotoring/decorators/: feature_monitoring.py  prediction_monitoring.py
minotoring/encoders/: json_encoder.py  json_encoder_library.py
minotoring/front/: .eslintrc  package-lock.json  package.json
minotoring/seeds/: iris-seed.py  iris_seed.py  seeds.py  (+2 more)
(+134 files in other folders)
