[tool.poetry]
name = "minotoring"
version = "0.0.0"
description = "Easy to use ML and plug and play monitoring tool."
authors = ["Boris Ghidaglia <borisghidaglia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
numpy = "^1.18.1"
pandas = "^1.0.1"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]
setuptools = "^45.2.0"
wheel = "^0.34.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
